# tacitus-mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  server.json  smithery.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
crates/tacitus-core/: Cargo.toml
crates/tacitus-core/src/: error.rs  ids.rs  lexical.rs  lib.rs  tokens.rs
crates/tacitus-core/src/memory/: conflict.rs  mod.rs  rank.rs  recall.rs  remember.rs  store.rs  types.rs
crates/tacitus-core/src/tools/: args.rs  mod.rs  tests.rs
crates/tacitus-core/src/vault/: embed.rs  embed_cache.rs  embed_ollama.rs  get.rs  graph.rs  index.rs  mod.rs  parse.rs  properties.rs  rename.rs  search.rs  suggest.rs  tasks.rs  template.rs  types.rs  write.rs
crates/tacitus-mcp/: Cargo.toml
crates/tacitus-mcp/src/: main.rs  sync_cli.rs
crates/tacitus-plugins/: Cargo.toml
crates/tacitus-plugins/examples/: run_plugin.rs
crates/tacitus-plugins/src/: abi.rs  host.rs  lib.rs  manifest.rs  registry.rs
crates/tacitus-plugins/tests/: example_guest.rs  host_tests.rs
crates/tacitus-plugins/tests/fixtures/: bad_json.wat  call_create_note.wat  call_search.wat  echo.wat  grow_memory.wat  infinite_loop.wat  logger.wat  no_exports.wat  trap.wat  wrong_abi.wat
crates/tacitus-relay/: Cargo.toml  Dockerfile
crates/tacitus-relay/src/: hub.rs  log.rs  main.rs
crates/tacitus-sync/: Cargo.toml
crates/tacitus-sync/src/: apply.rs  client.rs  crypto.rs  docs.rs  engine.rs  lib.rs  manifest.rs  merge.rs  outbox.rs  protocol.rs  scan.rs  state.rs
deploy/: sync.tacitus.md.conf
docs/: DATA_FORMAT.md  MCP_API.md  PLUGINS.md  SYNC.md
examples/: README.md  daily_note.mjs  vault_digest.py
examples/plugins/hello-tacitus/: Cargo.toml  README.md  tacitus-plugin.toml
examples/plugins/hello-tacitus/src/: lib.rs
