[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ionasrobert/tacitus-mcp-server"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
# CRDT layer (tacitus-sync). yrs is exact-pinned: its API has churned between
# minors and the whole CRDT surface is wrapped in docs.rs/merge.rs.
yrs = "=0.27.3"
dissimilar = "1"
# E2E encryption (tacitus-sync): pure-Rust RustCrypto stack — safe for
# cargo-dist cross builds (no C toolchain).
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
base64 = "0.22"
# Relay + sync client transport. rustls (never native-tls) — the
# aarch64-linux cross build in cargo-dist has no C TLS toolchain.
axum = "0.8"
tokio = "1"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
