[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.14.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ionasrobert/tacitus-mcp-server"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
# CRDT layer (tacitus-sync). yrs is exact-pinned: its API has churned between
# minors and the whole CRDT surface is wrapped in docs.rs/merge.rs.
yrs = "=0.27.3"
dissimilar = "1"
# Optional neural embedder (tacitus-core feature "ollama"): blocking HTTP to
# the local Ollama daemon — kept out of the default build.
ureq = { version = "3", features = ["json"] }
# E2E encryption (tacitus-sync): pure-Rust RustCrypto stack — safe for
# cargo-dist cross builds (no C toolchain).
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
base64 = "0.22"
# Relay + sync client transport. rustls (never native-tls) — the
# aarch64-linux cross build in cargo-dist has no C TLS toolchain.
axum = "0.8"
tokio = "1"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
# ring (not aws-lc-rs): no cmake/C toolchain needed on cargo-dist cross targets.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
# WASM plugin host (tacitus-plugins — a LIBRARY crate, deliberately not part
# of the shipped tacitus-mcp binary). wasmtime with default features OFF:
# `cache` would pull the zstd C library and `async` the fiber stack — we keep
# the tree lean (guarded in CI). The `runtime` feature does need a small cc
# shim (helpers.c), same class as ring's build (already in the binary tree),
# so it cross-compiles fine — but wiring plugins INTO the dist binary is an
# m3 decision to measure first. Major is pinned; wasmtime majors bump monthly,
# so bumps are routine and confined to host.rs/abi.rs.
wasmtime = { version = "47", default-features = false, features = ["runtime", "cranelift"] }
toml = "1"
# WAT text → wasm bytes, test-only: host fixtures stay reviewable text.
wat = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
