[package]
name = "tacitus-sync"
description = "CRDT sync engine for Tacitus vaults — E2E-encrypted, relay-based."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
yrs.workspace = true
dissimilar.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
hkdf.workspace = true
base64.workspace = true
tacitus-core = { path = "../tacitus-core" }
