[package]
name = "hello-tacitus"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"

# Deliberately NOT part of the parent Cargo workspace: this crate builds for
# wasm32-unknown-unknown only, like any third-party plugin would.
[workspace]

[profile.release]
opt-level = "s"
lto = true
